Style fix language toggle

--- a/src/components/language-toggle/languageToggle.less
+++ b/src/components/language-toggle/languageToggle.less
@@ -16,9 +16,10 @@
     }
 
     &__wrapper {
-        min-width: 230px;
+        min-width: 280px;
         position: relative;
         outline: none;
+        display: flex;
 
         &:hover {
             background-color: #ffffff;
@@ -51,7 +52,6 @@
     }
 
     &__menu {
-        width: 100%;
         display: flex;
         flex-wrap: nowrap;
 
@@ -77,7 +77,6 @@
         &__item {
             display: flex;
             padding: 0.5rem 2rem 0.5rem 1rem;
-            width: 100%;
             outline: none;
 
             &:hover {
