--- a/src/common/components/slett-knapp/slettKnapp.less
+++ b/src/common/components/slett-knapp/slettKnapp.less
@@ -1,5 +1,6 @@
 @import '../../styles/variables.less';
-@import '../../../../node_modules/nav-frontend-knapper-style/src/mixins.less';
+@import 'nav-frontend-knapper-style/src/mixins.less';
+
 .slettKnapp {
     .knappbase-mixin(inherit);
     width: 2rem;
