--- a/src/common/styles/globals.less
+++ b/src/common/styles/globals.less
@@ -1,5 +1,5 @@
 @import 'variables';
-@import '~nav-frontend-core/less/_mixins.less';
+@import 'nav-frontend-core/less/_mixins.less';
 
 #app  {
     background-color: white;
