--- a/src/common/components/step/step.less
+++ b/src/common/components/step/step.less
@@ -17,6 +17,10 @@
         }
     }
 
+    &__infoMessage {
+        margin-bottom: 1rem;
+    }
+
     &__validationErrorSummary {
         margin: 1rem auto 1rem auto;
         max-width: 704px;
