Lagt til css variabler

--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -4,3 +4,5 @@
 @tablet-breakpoint: @screen-tablet;
 @c-buttonBlue: #0067c5;
 @paddingSmall: 0.5rem;
+@orangeFocus: #ffbd66;
+@navRodLighten20: mix(@navRod, #fff, 80%);
