--- a/src/common/styles/globals.less
+++ b/src/common/styles/globals.less
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'mixins';
 @import 'nav-frontend-core/less/_mixins.less';
+@import '@navikt/ds-css';
 
 #app  {
     background-color: white;
