--- a/src/common/styles/globals.less
+++ b/src/common/styles/globals.less
@@ -2,6 +2,7 @@
 @import 'mixins';
 @import 'nav-frontend-core/less/_mixins.less';
 @import '@navikt/ds-css';
+@import 'print';
 
 #app  {
     background-color: white;
