Fjernet nav-frontend så godt det går ann

--- a/src/common/components/language-toggle/languageToggle.less
+++ b/src/common/components/language-toggle/languageToggle.less
@@ -1,12 +1,10 @@
-@import 'nav-frontend-core/less/_variabler.less';
-
 .buttonFocus() {
     outline: none;
-    box-shadow: 0 0 0 3px @fokusFarge;
+    box-shadow: 0 0 0 3px var(--navds-semantic-color-interaction-primary);
 }
 
 .languageToggle {
-    background-color: @navLysGra;
+    background-color: var(--navds-semantic-color-component-background-alternate);
     display: flex;
     justify-content: center;
     padding: 0.5rem;
