--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -1,8 +1,7 @@
-@import 'nav-frontend-core/less/_variabler.less';
-
 @mobile-breakpoint: 576px;
-@tablet-breakpoint: @screen-tablet;
+@tablet-breakpoint: 768px;
 @c-buttonBlue: #0067c5;
 @paddingSmall: 0.5rem;
 @orangeFocus: #ffbd66;
-@navRodLighten20: mix(@navRod, #fff, 80%);
+@navRodLighten20: mix(#c30000, #fff, 80%);
+@navGra40: var(--navds-semantic-color-component-background-alternate);
