--- a/src/common/components/step/step.less
+++ b/src/common/components/step/step.less
@@ -13,7 +13,7 @@
     &__backLink {
         position: relative;
         @media (max-width: 768px) {
-            top: -16px;
+            top: 1rem;
         }
     }
 
