--- a/src/common/components/banner/banner.less
+++ b/src/common/components/banner/banner.less
@@ -1,6 +1,7 @@
 .banner {
     background-color: #c1b5d0;
     padding: 1rem;
+    text-align: center;
 
     &--small {
         min-height: 3.5rem;
