--- a/src/common/components/utvidet-informasjon/infoToggler.less
+++ b/src/common/components/utvidet-informasjon/infoToggler.less
@@ -23,6 +23,7 @@
     &__chevron {
         position: absolute;
         right: 0;
+        top: 5px;
         .nav-frontend-chevron {
             margin-left: 0.4rem;
         }
