--- a/src/common/components/picture-scanning-guide/pictureScanningGuide.less
+++ b/src/common/components/picture-scanning-guide/pictureScanningGuide.less
@@ -1,7 +1,13 @@
 .pictureScanningGuide {
-    background-color: #e0f5fb;
     border-radius: 4px;
     padding: 1rem;
+
+    &--blue {
+        background-color: #e0f5fb;
+    }
+    &--white {
+        background-color: white;
+    }
     @media screen and (min-width: 768px) {
         padding: 1rem;
     }
